
  [ Mario Limonciello ]
  * Don't fail to run oem-config if oem-config/early_command isn't set.
  * Copy oem-config/early_command from the installation preseed onto the
    installed system.

  [ Evan Dandrea ]
  * Add oem-config/repository and oem-config/key, which respectively
    specify an additional repository to install packages from and a
    public key that the packages are signed with.

 -- Mario Limonciello <mario_limonciello@dell.com>  Mon, 01 Feb 2010 12:10:47 -0600

ubiquity (2.1.15) lucid; urgency=low

  [ Mario Limonciello ]
  * Add a new template, ubiquity/only-show-installable-languages for modifying
    the behavior of what languages to offer on an invokation based upon
    what's installed or "available" to install according to an apt cache.
  * Expose extra functions get and substitute to plugins via it's
    second argument (currently called Progress).
  * Drop extraneous handlers from Mythbuntu pages.
  * Move all handlers from mythbuntu_ui directly into plugins themselves.
  * Move some functions from the install.py script into a new file,
    install_misc.  The intention here is that they can then be used more
    directly by ubiquity plugins.
  * Add a new method for package removals to install_misc to allow
    plugins to mark packages to be removed later in remove_extras.
  * Modify the Mythbuntu services plugin to not even offer VNC if a short
    pw. (LP: #469312)
  * Convert most of the functions from mythbuntu_install.py into plugin
    type Install methods.
  * Support using pkgsel/install-language-support preseeded to false to
    ignore installation of language packs (just like alternates).
  * Drop mythbuntu_ui and all references to it.  The (former) Mythbuntu 
    frontend is now fully pluggable into ubiquity's gtk_ui on it's own.
  * Fix unmount command in chroot_cleanup to actually release /target/dev.
  * In the KDE frontend for ubi-language, use findChildren to find widgets
    because QWidget itself is not iterable.